k8s/adminer/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

    gethomepage.dev/href: 'https://adminer.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: adminer
    gethomepage.dev/group: Other
    gethomepage.dev/icon: adminer
    gethomepage.dev/name: Adminer
    gethomepage.dev/widget.type: adminer
    gethomepage.dev/widget.url: http://adminer-service

spec:
  ingressClassName: nginx
  rules:
    - host: &host adminer.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
